fix demo main overflow

--- a/app/ui/demo/demo.module.css
+++ b/app/ui/demo/demo.module.css
@@ -9,6 +9,7 @@
 .demoMain {
   /* border: 1px solid purple; */
   flex: 8;
+  overflow: auto;
 }
 
 .sideNav {
